added get files/all
